--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -5,3 +5,7 @@ controllers:
 kernel:
     resource: ../src/Kernel.php
     type: annotation
+
+fetch_all:
+    path: /articulos
+    controller: App\Controller\ArticuloController::fetch_all
