--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -6,6 +6,6 @@ kernel:
     resource: ../src/Kernel.php
     type: annotation
 
-fetch_all:
+inicio:
     path: /articulos
-    controller: App\Controller\ArticuloController::fetch_all
+    controller: App\Controller\ArticuloController::index
